print-notifications: Do not block because of authentication

Set a password callback for CUPS returning NULL to not block g-s-d
on password request when handling subscriptions.
We don't have a better solution right now (a better one would be to show
a password dialog to user).

https://bugzilla.gnome.org/show_bug.cgi?id=725440